# pathy

./: .gitignore  AGENTS.md  AGENTS_archive1.md  CHANGELOG.md  Cargo.toml  README.md  extension.toml  extension.wasm
.github/workflows/: ci.yml  release.yml
server/: Cargo.toml
server/src/: cache.rs  completion.rs  config.rs  context.rs  main.rs
src/: lib.rs
test/: test.py
