[package]
name = "pathy-server"
version = "0.1.0"
edition = "2021"

description = "Sidecar LSP server for path completions (skeleton)."
license = "MIT"
repository = "https://github.com/placeholder/zed-pathy"

[dependencies]
lsp-server = "0.7" # Minimal JSON-RPC + LSP transport.
lsp-types = "0.95" # LSP types for requests/responses.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
